--- a/assig-6/style.css
+++ b/assig-6/style.css
@@ -4,8 +4,37 @@
     width: 100%;
     justify-content: center;
     font-family: Arial, sans-serif;
-    color: white;
+   
 }
+ body{
+            padding: 0;
+            background-color: rgb(3, 2, 2);
+            font-family: Arial, sans-serif;
+             color: white;
+        }
+
+        .navbar a {
+          color: black;
+            text-decoration: none;
+            margin: auto;
+            font-weight: 700;
+        }
+        .navbar a:hover{
+           
+            text-decoration: underline;
+            transition: 0.6s;
+            transform: scale(1.1);
+        }
+        .navbar{
+          
+            padding: 20px;
+            color: black;
+            background-color: rgb(106, 175, 202);
+            display: flex;
+            justify-content: space-evenly;
+        
+        }
+         
 
 .home-content {
     width: 70%;
